[package]
name = "solax_can_bus"
description = "`#![no_std]` battery management library for interacting Solax Hybrid and AC CAN inverters."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde_support", "range_checked", "debug", "no_std"] # "std"
range_checked = []
debug = []
serde_support = ["dep:serde"]
no_std = ["dep:heapless"]
# std = []

[dependencies]
lazy_static = { version = "1.4.0" }
embedded-hal = "0.2.7"
anyhow = {version = "1.0.68", default-features = false}
log = {version = "0.4.17", default-features = false}
heapless = {version = "0.7.16", optional = true}
serde = { version = "1.0.152", features=["derive"], default-features = false, optional = true }
bitvec = { version = "1.0", default-features = false }
arbitrary = { version = "1.0", optional = true } # Enable with `arb` feature
embassy-time = { version = "0.1"}

[build-dependencies]
dbc-codegen = "0.2.0"