[package]
name = "solax_can_bus"
description = "`#![no_std]` battery management library for interacting Solax Hybrid and AC CAN inverters."
version = "0.1.0"
edition = "2021"

[features]
default = ["serde_support", "range_checked", "debug", "no_std", "defmt"] # "std"
range_checked = []
debug = []
defmt = ["dep:defmt"]
serde_support = ["dep:serde"]
no_std = ["dep:heapless"]


[dependencies]
# bms_standard = {git = "https://github.com/rand12345/bms_standard.git"}
bms_standard = {path = "../bms_standard"}
embedded-hal = "0.2.7"
log = {version = "0.4.17", default-features = false}
heapless = {version = "0.7.16", optional = true}
serde = { version = "1.0.152", features=["derive"], default-features = false, optional = true }
bitvec = { version = "1.0", default-features = false }
arbitrary = { version = "1.0", optional = true } # Enable with `arb` feature
defmt = {version ="0.3.2", optional = true} 
[build-dependencies]
dbc-codegen = "0.2.0"